Finished homework 3. Added files.

--- a/task_html_css_intro/practice/hw-2 and 3/index.html
+++ b/task_html_css_intro/practice/hw-2 and 3/index.html
@@ -43,6 +43,9 @@
         <label for="userName">Username:</label>
         <input id="userName" type="text" name="userName" value="">
       </form>
+      <!-- other text -->
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas atque nesciunt possimus ratione, nostrum sit dicta quis dolor placeat tempora reiciendis fugit aperiam, temporibus repellendus! Nihil architecto dolorem modi nam laudantium! Modi sapiente incidunt voluptate quod blanditiis voluptas, alias et ratione id. Exercitationem sint amet tempore pariatur dignissimos ipsam rerum?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas atque nesciunt possimus ratione, nostrum sit dicta quis dolor placeat tempora reiciendis fugit aperiam, temporibus repellendus! Nihil architecto dolorem modi nam laudantium! Modi sapiente incidunt voluptate quod blanditiis voluptas, alias et ratione id. Exercitationem sint amet tempore pariatur dignissimos ipsam rerum?</p>
     </main>
   </body>
 </html>
