--- a/task_responsive_web_design/practise other/index.html
+++ b/task_responsive_web_design/practise other/index.html
@@ -10,6 +10,7 @@
   </head>
   <body class="conteiner">
     <header class="header__block">
+      <div class="line"></div>
       <nav class="block__nav">
         <h1 class="nav__logo">
           <span class="nav__logo-letter">l</span>
@@ -18,18 +19,19 @@
           <span class="nav__logo-letter">e</span>
           <span class="nav__logo-letter">m</span>
         </h1>
+        <div class="burger__box"><span class="burger"></span></div>
         <ul class="nav__links">
-          <li><a class="nav__link" href="#">Головна</a></li>
-          <li><a class="nav__link" href="#">Каталог</a></li>
-          <li><a class="nav__link" href="#">Компанія</a></li>
-          <li><a class="nav__link" href="#">Контакти</a></li>
+          <li class="position"><a class="nav__link" href="#">Головна</a></li>
+          <li class="position"><a class="nav__link" href="#">Каталог</a></li>
+          <li class="position"><a class="nav__link" href="#">Компанія</a></li>
+          <li class="position"><a class="nav__link" href="#">Контакти</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section class="link__block">
         <h2 class="link__header">Lorem ipsum dolor sit amet</h2>
-        <ul class="link__block-items">
+        <ul class="block one">
           <li class="link__block-item">
             <h3 class="link__item-header">Lorem ipsum dolor sit amet</h3>
             <p class="link__item-text">
