--- a/task_responsive_web_design/practise other/index.html
+++ b/task_responsive_web_design/practise other/index.html
@@ -28,7 +28,8 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="circle-conteiner">
+      <div class="circle"></div>
       <section class="link__block">
         <h2 class="link__header">Lorem ipsum dolor sit amet</h2>
         <ul class="block one">
