--- a/task_responsive_web_design/practise margin padding transform/index.html
+++ b/task_responsive_web_design/practise margin padding transform/index.html
@@ -66,5 +66,20 @@
         <li class="box only"></li>
       </ul>
     </div>
+    <div class="lists__box border__bot">
+      <ul class="lists flex__2">
+        <li class="box seventh"></li>
+        <li class="box eighth"></li>
+        <li class="box nineth"></li>
+      </ul>
+    </div>
+    <div class="lists__box border__bot">
+      <div class="flip">
+        <div class="flip__card">
+          <div class="card__front">Hello!</div>
+          <div class="card__back">Goodbye!</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
