--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -6,7 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet" />
     <title>Britlex Language School</title>
   </head>
-  <body class="wrapper"></body>
+  <body class="wrapper">
+    <!-- header  -->
+    <header id="home" class="header">
+      <!-- logo -->
+      <p class="logo">Brit<span class="logo secondary">lex</span></p>
+      <!-- nav -->
+      <nav>
+        <ul class="nav">
+          <li class="nav__item">
+            <a class="nav__link" href="#home">Home</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Skills</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">About Us</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Pricing</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- tel -->
+      <a class="tel__link" href="tel:+380993649575">Let&#39;s Talk</a>
+    </header>
+    <!-- content  -->
+    <main>
+      <!-- hero  -->
+
+      <!-- skills  -->
+
+      <!-- about  -->
+
+      <!-- cricing  -->
+
+      <!-- contact  -->
+
+      <!-- footer -->
+    </main>
+    <footer></footer>
+  </body>
 </html>
