--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -18,9 +18,9 @@
     <header id="home" class="header">
       <!-- logo -->
       <p class="logo">Brit<span class="logo secondary">lex</span></p>
-      <!-- nav -->
-      <nav>
-        <ul class="nav">
+      <!-- nav top -->
+      <nav class="nav">
+        <ul class="nav__items">
           <li class="nav__item">
             <a class="nav__link" href="#home">Home</a>
           </li>
@@ -42,7 +42,7 @@
       <a class="tel__link" href="tel:+380993649575">Let&#39;s Talk</a>
     </header>
     <!-- content  -->
-    <main>
+    <main class="main">
       <!-- hero  -->
 
       <!-- skills  -->
@@ -52,9 +52,43 @@
       <!-- cricing  -->
 
       <!-- contact  -->
-
-      <!-- footer -->
     </main>
-    <footer></footer>
+    <!-- footer -->
+    <footer class="footer">
+      <!-- logo -->
+      <p class="logo">Brit<span class="logo secondary">lex</span></p>
+      <!-- nav bot -->
+      <nav class="nav">
+        <ul class="nav__items">
+          <li class="nav__item">
+            <a
+              class="nav__link bottom"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Terms and Conditions</a
+            >
+          </li>
+          <li class="nav__item">
+            <a
+              class="nav__link bottom"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Privacy Policy</a
+            >
+          </li>
+          <li class="nav__item">
+            <a
+              class="nav__link bottom"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Cookie Policy</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
