--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -62,7 +62,7 @@
         <ul class="nav__items">
           <li class="nav__item">
             <a
-              class="nav__link bottom"
+              class="nav__link bottom point"
               href="#"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -71,7 +71,7 @@
           </li>
           <li class="nav__item">
             <a
-              class="nav__link bottom"
+              class="nav__link bottom point"
               href="#"
               target="_blank"
               rel="noopener noreferrer nofollow"
