--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -20,6 +20,11 @@
       <p class="logo">Brit<span class="logo secondary">lex</span></p>
       <!-- nav top -->
       <nav class="nav">
+        <!-- burger -->
+        <div class="burger">
+          <span class="burger__line"></span>
+        </div>
+        <!-- menu -->
         <ul class="nav__items">
           <li class="nav__item">
             <a class="nav__link" href="#home">Home</a>
@@ -90,5 +95,7 @@
         </ul>
       </nav>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="./burger.js"></script>
   </body>
 </html>
