--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -60,7 +60,26 @@
     <!-- content  -->
     <main class="main">
       <!-- hero  -->
-
+      <section class="hero">
+        <h1 class="hero__header">Learn<br />Any Foreign<br />Language</h1>
+        <img
+          class="hero__lamp"
+          src="./images/light-bulb-svgrepo-com.png"
+          alt="lamp"
+          width="120"
+          height="120" />
+        <p class="hero__text">
+          With our teachers who write a program for each student, you will be
+          able to make your first sketch after the first lesson.
+        </p>
+        <a class="tel__link hero" href="tel:+380993649575">Let&#39;s Talk</a>
+        <img
+          class="hero__girl"
+          src="./images/learning-languages-bro.png"
+          alt="А girl studying foreign languages"
+          width="662"
+          height="662" />
+      </section>
       <!-- skills  -->
 
       <!-- about  -->
