--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -66,19 +66,19 @@
           class="hero__lamp"
           src="./images/light-bulb-svgrepo-com.png"
           alt="lamp"
-          width="84"
-          height="84" />
+          width="112"
+          height="112" />
         <p class="hero__text">
           With our teachers who write a program for each student, you will be
           able to make your first sketch after the first lesson.
         </p>
-        <a class="tel__link hero" href="tel:+380993649575">Let&#39;s Talk</a>
+        <a class="tel__link hero" href="tel:+380993649575">Get started</a>
         <img
           class="hero__girl"
           src="./images/learning-languages-bro.png"
           alt="А girl studying foreign languages"
           width="662"
-          height="662" />
+          height="512" />
       </section>
       <!-- skills  -->
 
