Первинна розмітка заревшена.
Попередньо розмічені наступні розділи сайту:
- Skills
- About Us
- Pricing
- Contact Us

--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -34,16 +34,16 @@
             <a class="nav__link" href="#home">Home</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">Skills</a>
+            <a class="nav__link" href="#skills">Skills</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">About Us</a>
+            <a class="nav__link" href="#about">About Us</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">Pricing</a>
+            <a class="nav__link" href="#pricing">Pricing</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">Contacts</a>
+            <a class="nav__link" href="#contact">Contacts</a>
           </li>
         </ul>
         <div class="close__btn"></div>
@@ -81,12 +81,187 @@
           height="512" />
       </section>
       <!-- skills  -->
-
+      <section id="skills" class="skills">
+        <h2 class="skills__title">Skills</h2>
+        <!-- skills cards -->
+        <ul class="skills__cards">
+          <!-- first card -->
+          <li class="skills__card">
+            <img
+              class="card__img"
+              src="./images/shared-goals-bro.png"
+              alt="speaking"
+              width="392"
+              height="392" />
+            <h3 class="card__title">Speaking</h3>
+            <p class="card__text">
+              Improve your English skills and confidence. Live classes and
+              interactive lessons online. 20% extra free for a limited time only
+              <br />
+              Learn English online and improve your skills through our
+              high-quality courses and resources – all designed for adult
+              language learners.
+            </p>
+            <a class="tel__link card__btn" href="#">Learn more</a>
+          </li>
+          <!-- second card -->
+          <li class="skills__card">
+            <img
+              class="card__img"
+              src="./images/typewriter-bro.png"
+              alt="writing"
+              width="292"
+              height="292" />
+            <h3 class="card__title">Writing</h3>
+            <p class="card__text">
+              One of the most important and extensive areas of natural science,
+              the science that studies substances, also their composition
+            </p>
+            <a class="tel__link card__btn" href="#">Learn more</a>
+          </li>
+          <!-- third card -->
+          <li class="skills__card">
+            <img
+              class="card__img"
+              src="./images/house-bookshelves-bro.png"
+              alt="reading"
+              width="392"
+              height="260" />
+            <h3 class="card__title">Reading</h3>
+            <p class="card__text">
+              Perception and response actions of the user resulting from the use
+              and/or upcoming use of the product, system or service
+            </p>
+            <a class="tel__link card__btn" href="#">Learn more</a>
+          </li>
+          <!-- fourth card -->
+          <li class="skills__card">
+            <img
+              class="card__img"
+              src="./images/podcast-audience-bro.png"
+              alt="listening"
+              width="408"
+              height="272" />
+            <h3 class="card__title">Listening</h3>
+            <p class="card__text">
+              Here you can find activities to practise your listening skills.
+              Listening will help you to improve your understanding
+            </p>
+            <a class="tel__link card__btn" href="#">Learn more</a>
+          </li>
+        </ul>
+      </section>
       <!-- about  -->
-
-      <!-- cricing  -->
-
+      <section id="about" class="about">
+        <h2 class="about__title">About Us</h2>
+        <p class="about__text">
+          The model offers a framework for discussing problems related to the
+          user's experience, as well as possible ways and means of solving them.
+          Application development begins at the top level (strategy), where the
+          future software product is described quite abstractly from the point
+          of view of the expectations of both users and the customer.
+        </p>
+        <ul class="about__items">
+          <li class="about__item">
+            <span class="about__item-numbers">800</span>Pupils
+          </li>
+          <li class="about__item">
+            <span class="about__item-numbers">18</span>Teachers
+          </li>
+          <li class="about__item">
+            <span class="about__item-numbers">6</span>Foreign languages
+          </li>
+        </ul>
+        <img
+          class="about__img"
+          src="./images/business-competition-bro.png"
+          alt="about us"
+          width="540"
+          height="540" />
+      </section>
+      <!-- pricing  -->
+      <section id="pricing" class="pricing">
+        <h2 class="pricing__title">Pricing</h2>
+        <ul class="pricing__items">
+          <!-- Self-study online course  -->
+          <li class="pricing__item">
+            <img
+              class="pricing__item-img"
+              src="./images/online-test-bro.png"
+              alt="self-study online course"
+              width="320"
+              height="320" />
+            <h3 class="pricing__item-title">Self-study online course</h3>
+            <p class="pricing__item-text">
+              Start learning English online in live classes with qualified EC
+              teachers and students from all over the world.
+            </p>
+            <p class="pricing__item-price">
+              <span class="price__numbers">&#163;5.99</span>per month
+            </p>
+          </li>
+          <!-- Live online classes  -->
+          <li class="pricing__item">
+            <img
+              class="pricing__item-img"
+              src="./images/lesson-bro.png"
+              alt="live online classes"
+              width="424"
+              height="320" />
+            <h3 class="pricing__item-title">Live online classes</h3>
+            <p class="pricing__item-text">
+              Interactive group classes with expert teachers. Free 7-day trial
+            </p>
+            <p class="pricing__item-price">
+              <span class="price__numbers">&#163;12.99</span>per month
+            </p>
+          </li>
+          <!-- Personal Tuition  -->
+          <li class="pricing__item">
+            <img
+              class="pricing__item-img"
+              src="./images/webinar-bro.png"
+              alt="personal Tuition"
+              width="320"
+              height="320" />
+            <h3 class="pricing__item-title">Personal Tuition</h3>
+            <p class="pricing__item-text">
+              Online one-to-one English tutoring – enjoy our first session for
+              only $1
+            </p>
+            <p class="pricing__item-price">
+              <span class="price__numbers">&#163;12.99</span>per month
+            </p>
+          </li>
+        </ul>
+      </section>
       <!-- contact  -->
+      <section id="contact" class="contact">
+        <h2 class="contact__title">Contact Us</h2>
+        <img
+          class="contact__img"
+          src="./images/resource.png"
+          alt="a boy runs with a paper airplane"
+          width="480"
+          height="432" />
+        <p class="contact__text">
+          Discover your current English level by taking our free online English
+          test. Sign up to our newsletter for learning tips and free resources
+        </p>
+        <form
+          class="contact__form"
+          action="#"
+          method="post"
+          enctype="multipart/form-data">
+          <input
+            class="contact__form-text"
+            placeholder="Enter Your E-mail"
+            type="email"
+            name="userEmail"
+            value="" />
+          <button class="contact__form-btn" type="submit">Subscribe</button>
+        </form>
+      </section>
     </main>
     <!-- footer -->
     <footer class="footer">
