Завершено розділ Skills.
Завершено оформлення розділу Skills. Налаштований його адаптивний дизайн для розширення понад 850 рх.

--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -86,7 +86,7 @@
         <!-- skills cards -->
         <ul class="skills__cards">
           <!-- first card -->
-          <li class="skills__card">
+          <li class="skills__card first">
             <img
               class="card__img"
               src="./images/shared-goals-bro.png"
@@ -94,60 +94,61 @@
               width="392"
               height="392" />
             <h3 class="card__title">Speaking</h3>
-            <p class="card__text">
+            <p class="card__text first">
               Improve your English skills and confidence. Live classes and
               interactive lessons online. 20% extra free for a limited time only
-              <br />
+            </p>
+            <p class="card__text">
               Learn English online and improve your skills through our
               high-quality courses and resources – all designed for adult
               language learners.
             </p>
-            <a class="tel__link card__btn" href="#">Learn more</a>
+            <a class="card__btn" href="#">Learn more</a>
           </li>
           <!-- second card -->
-          <li class="skills__card">
+          <li class="skills__card second">
             <img
               class="card__img"
               src="./images/typewriter-bro.png"
               alt="writing"
-              width="292"
-              height="292" />
+              width="392"
+              height="264" />
             <h3 class="card__title">Writing</h3>
             <p class="card__text">
               One of the most important and extensive areas of natural science,
               the science that studies substances, also their composition
             </p>
-            <a class="tel__link card__btn" href="#">Learn more</a>
+            <a class="card__btn" href="#">Learn more</a>
           </li>
           <!-- third card -->
-          <li class="skills__card">
+          <li class="skills__card third">
             <img
               class="card__img"
               src="./images/house-bookshelves-bro.png"
               alt="reading"
               width="392"
-              height="260" />
+              height="264" />
             <h3 class="card__title">Reading</h3>
             <p class="card__text">
               Perception and response actions of the user resulting from the use
               and/or upcoming use of the product, system or service
             </p>
-            <a class="tel__link card__btn" href="#">Learn more</a>
+            <a class="card__btn" href="#">Learn more</a>
           </li>
           <!-- fourth card -->
-          <li class="skills__card">
+          <li class="skills__card fourth">
             <img
-              class="card__img"
+              class="card__img fourth"
               src="./images/podcast-audience-bro.png"
               alt="listening"
               width="408"
               height="272" />
-            <h3 class="card__title">Listening</h3>
-            <p class="card__text">
+            <h3 class="card__title fourth">Listening</h3>
+            <p class="card__text fourth">
               Here you can find activities to practise your listening skills.
               Listening will help you to improve your understanding
             </p>
-            <a class="tel__link card__btn" href="#">Learn more</a>
+            <a class="card__btn fourth" href="#">Learn more</a>
           </li>
         </ul>
       </section>
