--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -88,7 +88,7 @@
           <!-- first card -->
           <li class="skills__card first">
             <img
-              class="card__img"
+              class="card__img first"
               src="./images/shared-goals-bro.png"
               alt="speaking"
               width="392"
@@ -98,7 +98,7 @@
               Improve your English skills and confidence. Live classes and
               interactive lessons online. 20% extra free for a limited time only
             </p>
-            <p class="card__text">
+            <p class="card__text second">
               Learn English online and improve your skills through our
               high-quality courses and resources – all designed for adult
               language learners.
@@ -108,7 +108,7 @@
           <!-- second card -->
           <li class="skills__card second">
             <img
-              class="card__img"
+              class="card__img second"
               src="./images/typewriter-bro.png"
               alt="writing"
               width="392"
@@ -123,7 +123,7 @@
           <!-- third card -->
           <li class="skills__card third">
             <img
-              class="card__img"
+              class="card__img third"
               src="./images/house-bookshelves-bro.png"
               alt="reading"
               width="392"
