--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -87,18 +87,23 @@
         <ul class="skills__cards">
           <!-- first card -->
           <li class="skills__card first">
-            <img
-              class="card__img first"
-              src="./images/shared-goals-bro.png"
-              alt="speaking"
-              width="392"
-              height="392" />
+            <picture class="all">
+              <source
+                srcset="./images/shared-goals-bro-mini.png"
+                media="(max-width: 650px)" />
+              <img
+                class="card__img first"
+                src="./images/shared-goals-bro.png"
+                alt="speaking"
+                width="392"
+                height="392" />
+            </picture>
             <h3 class="card__title">Speaking</h3>
             <p class="card__text first">
               Improve your English skills and confidence. Live classes and
               interactive lessons online. 20% extra free for a limited time only
-            </p>
-            <p class="card__text second">
+              <br />
+              <br />
               Learn English online and improve your skills through our
               high-quality courses and resources – all designed for adult
               language learners.
@@ -107,12 +112,17 @@
           </li>
           <!-- second card -->
           <li class="skills__card second">
-            <img
-              class="card__img second"
-              src="./images/typewriter-bro.png"
-              alt="writing"
-              width="392"
-              height="264" />
+            <picture class="all">
+              <source
+                srcset="./images/typewriter-bro-mini.png"
+                media="(max-width: 650px)" />
+              <img
+                class="card__img second"
+                src="./images/typewriter-bro.png"
+                alt="writing"
+                width="392"
+                height="264" />
+            </picture>
             <h3 class="card__title">Writing</h3>
             <p class="card__text">
               One of the most important and extensive areas of natural science,
@@ -122,12 +132,17 @@
           </li>
           <!-- third card -->
           <li class="skills__card third">
-            <img
-              class="card__img third"
-              src="./images/house-bookshelves-bro.png"
-              alt="reading"
-              width="392"
-              height="264" />
+            <picture class="all">
+              <source
+                srcset="./images/house-bookshelves-bro-mini.png"
+                media="(max-width: 650px)" />
+              <img
+                class="card__img third"
+                src="./images/house-bookshelves-bro.png"
+                alt="reading"
+                width="392"
+                height="264" />
+            </picture>
             <h3 class="card__title">Reading</h3>
             <p class="card__text">
               Perception and response actions of the user resulting from the use
@@ -137,12 +152,17 @@
           </li>
           <!-- fourth card -->
           <li class="skills__card fourth">
-            <img
-              class="card__img fourth"
-              src="./images/podcast-audience-bro.png"
-              alt="listening"
-              width="408"
-              height="272" />
+            <picture class="fourth">
+              <source
+                srcset="./images/podcast-audience-bro-mini.png"
+                media="(max-width: 650px)" />
+              <img
+                class="card__img fourth"
+                src="./images/podcast-audience-bro.png"
+                alt="listening"
+                width="408"
+                height="272" />
+            </picture>
             <h3 class="card__title fourth">Listening</h3>
             <p class="card__text fourth">
               Here you can find activities to practise your listening skills.
