Виконав стилізацію розділу About As.
Без адаптиву.

--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -183,14 +183,14 @@
           of view of the expectations of both users and the customer.
         </p>
         <ul class="about__items">
-          <li class="about__item">
+          <li class="about__item first">
             <span class="about__item-numbers">800</span>Pupils
           </li>
-          <li class="about__item">
+          <li class="about__item second">
             <span class="about__item-numbers">18</span>Teachers
           </li>
-          <li class="about__item">
-            <span class="about__item-numbers">6</span>Foreign languages
+          <li class="about__item third">
+            <span class="about__item-numbers">6</span>Foreign<br />languages
           </li>
         </ul>
         <img
