Робота з адаптивним дизайном сайту.
Що зроблено:
- вніс деякі зміни в розділ Skills;
- налаштував адаптивний дизайн для розділу About as при розширенні більше 600 рх.

--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -190,7 +190,7 @@
             <span class="about__item-numbers">18</span>Teachers
           </li>
           <li class="about__item third">
-            <span class="about__item-numbers">6</span>Foreign<br />languages
+            <span class="about__item-numbers">6</span>Foreign languages
           </li>
         </ul>
         <img
