Завершив адаптивний дизайн розділу Pricing.
Завершив адаптивний дизайн розділів включно по розділ Pricing.

--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -224,7 +224,7 @@
           <!-- Live online classes  -->
           <li class="pricing__item">
             <img
-              class="pricing__item-img"
+              class="pricing__item-img second"
               src="./images/lesson-bro.png"
               alt="live online classes"
               width="424"
