--- a/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
+++ b/task_responsive_web_design/practise grid - 3 (Britlex Language School)/index.html
@@ -6,6 +6,26 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=0" />
+    <!-- about author -->
+    <meta name="Author" content="Oleksii Anoshkin" />
+    <meta name="Copyright" content="Oleksii Anoshkin" />
+    <meta name="Address" content="Ukraine, Kharkiv" />
+    <!-- general -->
+    <meta name="description" content="Britlex Language School" />
+    <meta name="keywords" content="Britlex, Language School, English School" />
+    <meta name="robots" content="all" />
+    <!-- facebook -->
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="site" />
+    <meta property="og:title" content="Britlex Language School" />
+    <meta property="og:description" content="Britlex Language School" />
+    <meta
+      property="og:image"
+      content="https://britlex-lan9ua9e-school.netlify.app/images/learning-languages-bro.png" />
+    <meta
+      property="og:url"
+      content="https://britlex-lan9ua9e-school.netlify.app/" />
+    <meta property="og:site_name" content="Britlex Language School" />
     <!-- styles -->
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./styles.css" />
@@ -16,7 +36,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet" />
     <!-- images -->
-    <!-- <link rel="shortcut icon" type="image/x-icon" href="./favicon.png"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.png" />
     <link rel="preload" as="image" href="./images/burger-bg.png" />
     <!-- title -->
     <title>Britlex Language School</title>
