--- a/html-css-popup/index.html
+++ b/html-css-popup/index.html
@@ -12,12 +12,80 @@
     <!-- styles -->
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./styles.css" />
-    <!-- fonts -->
-
     <!-- images -->
     <link rel="shortcut icon" type="image/x-icon" href="#" />
     <!-- title -->
-    <title>HTML CSS Popup Practise - Continents and Countries</title>
+    <title>HTML CSS Popup Practise</title>
   </head>
-  <body></body>
+  <body class="wrapper">
+    <header class="header">
+      <h1 class="header__title">Icon fonts for any project</h1>
+      <nav class="header__nav">
+        <ul class="nav__items">
+          <li class="nav__item">
+            <input type="checkbox" class="hide" id="popup" />
+            <label for="popup" class="item__btn">Media</label>
+            <div class="popup__conteiner">
+              <ul class="popup__content"></ul>
+            </div>
+          </li>
+          <li class="nav__item">
+            <input type="checkbox" class="hide" id="popup" />
+            <label for="popup" class="item__btn">Maps</label>
+            <div class="popup__conteiner">
+              <ul class="popup__content"></ul>
+            </div>
+          </li>
+          <li class="nav__item">
+            <input type="checkbox" class="hide" id="popup" />
+            <label for="popup" class="item__btn">Arrow</label>
+            <div class="popup__conteiner">
+              <ul class="popup__content"></ul>
+            </div>
+          </li>
+          <li class="nav__item">
+            <a href="#">Others</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main">
+      <p class="main__text">
+        Discover the most downloaded icon fonts. Thousands of free icon fonts
+        for your projects in PNG, SVG, iOS, Android format.
+      </p>
+    </main>
+    <footer class="footer">
+      <p class="footer__text">&#169; Oleksii Anoshkin 2023</p>
+      <ul class="footer__links">
+        <li>
+          <a
+            class="footer__link"
+            href="#"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            >GitHub</a
+          >
+        </li>
+        <li>
+          <a
+            class="footer__link"
+            href="#"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            >Facebook</a
+          >
+        </li>
+        <li>
+          <a
+            class="footer__link"
+            href="#"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            >LinkedIn</a
+          >
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
