Робота над помилками
Що зроблено:
- перевірив семантичність тегів та чи на своїх вони місцях;
- попрацював над класами.

--- a/html-css-popup/index.html
+++ b/html-css-popup/index.html
@@ -19,33 +19,33 @@
   </head>
   <body class="wrapper">
     <header class="header">
-      <div class="title__conteiner">
-        <h1 class="header__title">Icon fonts for any project</h1>
-      </div>
+      <section class="header__conteiner">
+        <h1 class="header__conteiner-title">Icon fonts for any project</h1>
+      </section>
       <nav class="header__nav">
-        <ul class="nav__items">
-          <li class="nav__item">
-            <input type="checkbox" class="hide" id="checkbox__first" />
-            <label for="checkbox__first" class="item__btn">Media</label>
-            <div id="popup__first" class="overlay">
+        <ul class="header__nav-items">
+          <li class="header__nav-item">
+            <input type="checkbox" class="hide" id="checkboxFirst" />
+            <label for="checkboxFirst" class="btn">Media</label>
+            <div id="popupFirst" class="popup">
               <ul class="popup__conteiner"></ul>
             </div>
           </li>
-          <li class="nav__item">
-            <input type="checkbox" class="hide" id="checkbox__second" />
-            <label for="checkbox__second" class="item__btn">Maps</label>
-            <div id="popup__second" class="overlay">
+          <li class="header__nav-item">
+            <input type="checkbox" class="hide" id="checkboxSecond" />
+            <label for="checkboxSecond" class="btn">Maps</label>
+            <div id="popupSecond" class="popup">
               <ul class="popup__conteiner"></ul>
             </div>
           </li>
-          <li class="nav__item">
-            <input type="checkbox" class="hide" id="checkbox__third" />
-            <label for="checkbox__third" class="item__btn">Arrow</label>
-            <div id="popup__third" class="overlay">
+          <li class="header__nav-item">
+            <input type="checkbox" class="hide" id="checkboxThird" />
+            <label for="checkboxThird" class="btn">Arrow</label>
+            <div id="popupThird" class="popup">
               <ul class="popup__conteiner"></ul>
             </div>
           </li>
-          <li class="nav__item">
+          <li class="header__nav-item">
             <a
               class="other"
               href="https://www.flaticon.com/icon-fonts-most-downloaded"
@@ -65,35 +65,38 @@
     </main>
     <footer class="footer">
       <p class="footer__text">&#169; Oleksii Anoshkin 2023</p>
-      <ul class="footer__links">
-        <li>
-          <a
-            class="footer__link github"
-            href="https://github.com/oleksii-anoshkin"
-            target="_blank"
-            rel="noopener noreferrer nofollow"
-            >GitHub</a
-          >
-        </li>
-        <li>
-          <a
-            class="footer__link facebook"
-            href="https://www.facebook.com/aleksey.kh.ua"
-            target="_blank"
-            rel="noopener noreferrer nofollow"
-            >Facebook</a
-          >
-        </li>
-        <li>
-          <a
-            class="footer__link linkedin"
-            href="https://www.linkedin.com/in/oleksii-anoshkin-850540210"
-            target="_blank"
-            rel="noopener noreferrer nofollow"
-            >LinkedIn</a
-          >
-        </li>
-      </ul>
+      <p class="footer__text">=^.^=</p>
+      <nav>
+        <ul class="footer__links">
+          <li>
+            <a
+              class="footer__link github"
+              href="https://github.com/oleksii-anoshkin"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >GitHub</a
+            >
+          </li>
+          <li>
+            <a
+              class="footer__link facebook"
+              href="https://www.facebook.com/aleksey.kh.ua"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Facebook</a
+            >
+          </li>
+          <li>
+            <a
+              class="footer__link linkedin"
+              href="https://www.linkedin.com/in/oleksii-anoshkin-850540210"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >LinkedIn</a
+            >
+          </li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
