--- a/html-css-popup/index.html
+++ b/html-css-popup/index.html
@@ -65,7 +65,13 @@
     </main>
     <footer class="footer">
       <p class="footer__text">&#169; Oleksii Anoshkin 2023</p>
-      <p class="footer__text">=^.^=</p>
+      <a
+        class="footer__text kottans"
+        href="https://kottans.org/"
+        target="_blank"
+        rel="noopener noreferrer nofollow"
+        >=^.^=</a
+      >
       <nav>
         <ul class="footer__links">
           <li>
